crates/biome_cli/tests/snapshots/main_cases_reporter_junit/reports_diagnostics_junit_format_command.snap
---
source: crates/biome_cli/tests/snap_test.rs
assertion_line: 577
expression: redactor(content)
---
## Command

```shell
biome format --reporter=junit main.ts index.ts
```

## `index.ts`

```ts
import { z} from "z"
import { z, b , a} from "lodash"

a ==b

debugger

let f;
		let f;
```

## `main.ts`

```ts
import { z} from "z"
import { z, b , a} from "lodash"

a ==b

debugger

let f;
		let f;
```

# Termination Message

```block
format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
<?xml version="1.0" encoding="UTF-8"?>
<testsuites name="Biome" tests="2" failures="2" errors="2" time="<TIME>">
    <testsuite name="index.ts" tests="1" disabled="0" errors="0" failures="1" package="org.biome">
        <testcase name="org.biome.format">
            <failure message="Formatter would have printed the following content:">Formatter would have printed the following content:</failure>
        </testcase>
    </testsuite>
    <testsuite name="main.ts" tests="1" disabled="0" errors="0" failures="1" package="org.biome">
        <testcase name="org.biome.format">
            <failure message="Formatter would have printed the following content:">Formatter would have printed the following content:</failure>
        </testcase>
    </testsuite>
</testsuites>

```
